Realización ejercicio 1 de JavaScript

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <p id="boton-mostrar-nav">Menu</p>
   </header>
   <nav class="invisible">
+    <div id="menu-temas">
+      <p class="boton-activado">Tema 1</p><p>Tema 2</p><p>Tema 3</p>       
+    </div>
     <div id="menu-contenidos">
       <p class="boton-activado">Introducción</p>
       <p>Sobre mí</p>
