--- a/index.html
+++ b/index.html
@@ -119,6 +119,17 @@
     </section>
     <section class="invisible">
       <h3 style="text-align:center">Portfolio</h3>
+      <form id="selector-portfolio">
+        <select>
+          <option></option>
+          <option>Java</option>
+          <option>JavaScript</option>
+          <option>HTML</option>
+          <option>CSS</option>
+          <option>XML</option>
+          <option>UML</option>
+        <select>
+      </form>
       <div id="contenedor-tarjetas">
         <div class="tarjeta html css javascript">
           <h4>HTML, CSS Y JS</h4>
