--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
   <script type="text/javascript" src="js/app.js" defer></script>
 
-  <link rel="shortcut icon" href="media/icon/favicon.png" type="image/xpng">
+  <!-- Icono al lado del titulo 
+  <link rel="shortcut icon" href="media/icon/favicon.png" type="image/xpng"> -->
 
   <title>Jose's Portfolio</title>
 
